...
        sortStore = BookmarkSortStore,
        itemHeightDp = 88,
        emptyText = stringResource(R.string.no_bookmarks),
        onDismiss = onDismiss
    ) { bookmark, page, dateStr ->
        Row(
            modifier = Modifier.fillMaxWidth().height(88.dp).testTag("bookmarkItem"),
            verticalAlignment = Alignment.CenterVertically
        ) {
            Column(
                modifier = Modifier
                    .weight(1f)
                    .fillMaxHeight()
...
                ) {
                    if (page > 0) {
                        Text(
                            "p.$page",
                            style = EreaderFontSize.M.copy(fontWeight = FontWeight.Bold),
                            color = EreaderColors.Black,
                            modifier = Modifier.testTag("bookmarkPageText")
                        )
                    }
                    Text(
                        bookmark.chapterTitle,
                        style = EreaderFontSize.M,
                        color = EreaderColors.DarkGray,
...
